fix(LottoMachine): 리스트 초기화 방법 변경